--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -20,7 +20,12 @@ dependencies:
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
+
+  # Shirley Libs
   flutter_list_drag_and_drop: "^0.1.3"
+  flutter_map: any
+  google_maps_flutter: ^0.0.3+3
+  carousel_slider: ^1.0.1
 
 dev_dependencies:
   flutter_test:
@@ -37,6 +42,9 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
+  pluggin:
+    androidPackage: de.jonasbark.stripepayment
+    pluginClass: StripePaymentPlugin
 
   # To add assets to your application, add an assets section, like this:
   # assets:
@@ -68,3 +76,4 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.io/custom-fonts/#from-packages
+flutter_swiper : ^lastest_version
