--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,9 +42,9 @@ flutter:
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
-  pluggin:
-    androidPackage: de.jonasbark.stripepayment
-    pluginClass: StripePaymentPlugin
+  plugin:
+    androidPackage: com.mtaliaf.stripeflutter
+    pluginClass: StripeFlutterPlugin
 
   # To add assets to your application, add an assets section, like this:
   # assets:
