front-end flow done

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -21,10 +21,15 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
   flutter_list_drag_and_drop: "^0.1.3"
+  carousel_slider: ^1.0.1
+  webview_flutter: ^0.3.0
+  flutter_webview_plugin: ^0.3.0+2
+
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
+
 
 
 # For information on the generic Dart part of this file, see the
@@ -32,15 +37,10 @@ dev_dependencies:
 
 # The following section is specific to Flutter.
 flutter:
-
   # The following line ensures that the Material Icons font is
   # included with your application, so that you can use the icons in
   # the material Icons class.
   uses-material-design: true
-  plugin:
-    androidPackage: com.mtaliaf.stripeflutter
-    pluginClass: StripeFlutterPlugin
-
 
   # To add assets to your application, add an assets section, like this:
   # assets:
@@ -48,7 +48,11 @@ flutter:
   #  - images/a_dot_ham.jpeg
   assets:
     - img/ntu.png
-
+    - assets/3050_noodles.jpg
+    - assets/201205-xl-beef-fried-rice.jpg
+    - assets/92122816-chicken-fillet-with-fried-rice-on-white-plate-.jpg
+    - assets/crispy-fish-Greek-rice-bowls-1.jpg
+    - assets/BackGround.jpg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.io/assets-and-images/#resolution-aware.
 
@@ -74,3 +78,4 @@ flutter:
   #
   # For details regarding fonts from package dependencies,
   # see https://flutter.io/custom-fonts/#from-packages
+
