--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -16,7 +16,8 @@ dependencies:
   firebase_auth: ^0.6.6
   flutter:
     sdk: flutter
-
+  intl: ^0.15.6
+  uuid: ^1.0.0
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.2
@@ -79,3 +80,7 @@ flutter:
   # For details regarding fonts from package dependencies,
   # see https://flutter.io/custom-fonts/#from-packages
 
+  fonts:
+    - family: CustomFont
+      fonts:
+        - asset: assets/CustomFont.ttf
