--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -49,11 +49,11 @@ flutter:
   #  - images/a_dot_ham.jpeg
   assets:
     - img/ntu.png
-    - assets/3050_noodles.jpg
+    - assets/one.jpg
     - assets/201205-xl-beef-fried-rice.jpg
     - assets/92122816-chicken-fillet-with-fried-rice-on-white-plate-.jpg
     - assets/crispy-fish-Greek-rice-bowls-1.jpg
-    - assets/BackGround.jpg
+    - assets/veg_rice.jpg
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.io/assets-and-images/#resolution-aware.
 
