--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -25,7 +25,7 @@ dependencies:
   carousel_slider: ^1.0.1
   webview_flutter: ^0.3.0
   flutter_webview_plugin: ^0.3.0+2
-
+  http: '>=0.11.3+12'
 
 dev_dependencies:
   flutter_test:
