--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ environment:
 
 dependencies:
   firebase_auth: ^0.6.6
+  firebase_database: 1.0.3
   flutter:
     sdk: flutter
   intl: ^0.15.6
@@ -26,6 +27,7 @@ dependencies:
   webview_flutter: ^0.3.0
   flutter_webview_plugin: ^0.3.0+2
   http: '>=0.11.3+12'
+  threading: 0.0.10
 
 dev_dependencies:
   flutter_test:
