--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,12 +34,15 @@ dependencies:
   # Atrik Libs
   page_view_indicators: ^1.1.0
 
+  #todolistv2 libs
+  snaplist: ^0.1.3
+  flutter_redux: ^0.5.2
 
 
 dev_dependencies:
   flutter_test:
     sdk: flutter
-
+  
 
 # For information on the generic Dart part of this file, see the
 # following page: https://www.dartlang.org/tools/pub/pubspec
@@ -59,6 +62,7 @@ flutter:
   assets:
     - img/ntu.png
     - data_repo/structuredData.json
+    - assets/images/profile_image.jpg
   fonts:
     - family : MyFlutterApp
       fonts:
