--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -31,9 +31,14 @@ dependencies:
   flutter_map: any
   google_maps_flutter: ^0.0.3+3
   carousel_slider: ^1.0.1
+  webview_flutter: ^0.3.0
+  flutter_webview_plugin: ^0.3.0+2
+  http: '>=0.11.3+12'
+  threading: 0.0.10
 
   # Atrik Libs
   page_view_indicators: ^1.1.0
+
 
   #todolistv2 libs
   snaplist: ^0.1.3
@@ -65,6 +70,11 @@ flutter:
     - img/ntu.png
     - data_repo/structuredData.json
     - assets/images/profile_image.jpg
+    - assets/201205-xl-beef-fried-rice.jpg
+    - assets/92122816-chicken-fillet-with-fried-rice-on-white-plate-.jpg
+    - assets/crispy-fish-Greek-rice-bowls-1.jpg
+    - assets/veg_rice.jpg
+    - assets/one.jpg
   fonts:
     - family : MyFlutterApp
       fonts:
