--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -69,7 +69,7 @@ flutter:
   assets:
     - img/ntu.png
     - data_repo/structuredData.json
-    - assets/images/profile_image.jpg
+    - assets/images/profile_image.png
     - assets/201205-xl-beef-fried-rice.jpg
     - assets/92122816-chicken-fillet-with-fried-rice-on-white-plate-.jpg
     - assets/crispy-fish-Greek-rice-bowls-1.jpg
