--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   # Atrik Libs
   page_view_indicators: ^1.1.0
   flutter_staggered_grid_view: "^0.2.7"
+  flutter_multiple_image_picker: ^0.0.1
 
 
   #todolistv2 libs
