--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -18,7 +18,7 @@
          FlutterApplication and put your custom class here. -->
     <application tools:replace="icon, label"
         android:name="io.flutter.app.FlutterApplication"
-        android:label="NTYou!"
+        android:label="NTYou"
         android:icon="@mipmap/ic_launcher">
         <activity
             android:name=".MainActivity"
