--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   page_view_indicators: ^1.1.0
   flutter_staggered_grid_view: "^0.2.7"
   flutter_multiple_image_picker: ^0.0.1
+  flutter_email_sender: ^1.2.0
 
 
   #todolistv2 libs
