--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -13,8 +13,8 @@ environment:
   sdk: ">=2.0.0-dev.68.0 <3.0.0"
 
 dependencies:
-  firebase_auth:
-  cloud_firestore:
+  firebase_auth: 0.8.0+1
+  cloud_firestore: 0.9.0
   url_launcher: ^3.0.3
   mailer:
   flutter:
@@ -28,8 +28,6 @@ dependencies:
 
   # Shirley Libs
   flutter_list_drag_and_drop: "^0.1.3"
-  flutter_map: any
-  google_maps_flutter: ^0.0.3+3
   carousel_slider: ^1.0.1
   webview_flutter: ^0.3.0
   flutter_webview_plugin: ^0.3.0+2
@@ -47,6 +45,7 @@ dependencies:
   snaplist: ^0.1.3
   flutter_redux: ^0.5.2
   http_client: ^0.5.0
+
 
 dev_dependencies:
   flutter_test:
@@ -78,6 +77,7 @@ flutter:
     - assets/crispy-fish-Greek-rice-bowls-1.jpg
     - assets/veg_rice.jpg
     - assets/one.jpg
+    - assets/paynow.png
   fonts:
     - family : MyFlutterApp
       fonts:
